Update DoGain Vitis 730de75150cc4347a751df26522589f8.md

--- a/Lab06 Working with HLS 9b2ebc09d3614613aae2553700d082ae/DoGain Vitis 730de75150cc4347a751df26522589f8.md
+++ b/Lab06 Working with HLS 9b2ebc09d3614613aae2553700d082ae/DoGain Vitis 730de75150cc4347a751df26522589f8.md
@@ -8,7 +8,7 @@ Make sure that the board is power-on and connected.
 
 ### Troubleshooting: Cypress "driver error" problem (Vitis can't find the port)
 
-[Troubleshooting: Cypress "driver error" problem (Vitis can't find the port)](https://www.notion.so/Troubleshooting-Cypress-driver-error-problem-Vitis-can-t-find-the-port-9c61286cfd0e4f0bbe4892d0abcdbb78) 
+[Troubleshooting: Cypress "driver error" problem (Vitis can't find the port)](https://github.com/hajin-kim/FPGA_Tutorial_with_HLS/blob/main/Troubleshootings%20f43673650b7c4eb5b83fa2b7a80452e2/Troubleshooting%20Cypress%20driver%20error%20problem%20(Viti%209c61286cfd0e4f0bbe4892d0abcdbb78.md) 
 
 ## Creating Vitis application project
 
@@ -18,9 +18,9 @@ Ppt **page 49~50**. The Launch SDK is replaced by Tool-Launch Vitis, and there a
 2. Create an Platform and Application Project.
 
 We can directly create an application project from the hardware (.xsa) file. See:
- [Alternative: Direct Creation of Vitis Application Project from Vivado Hardware](https://www.notion.so/Alternative-Direct-Creation-of-Vitis-Application-Project-from-Vivado-Hardware-c3733968f81641d19b17885f5466a621) 
+ [Alternative: Direct Creation of Vitis Application Project from Vivado Hardware](https://github.com/hajin-kim/FPGA_Tutorial_with_HLS/blob/main/Lab05%20Hello%20World%20with%20Vitis%20and%20Vivado%20d3897032db324f5d9531e5ab0a9af6df/Alternative%20Direct%20Creation%20of%20Vitis%20Application%20P%20c3733968f81641d19b17885f5466a621.md) 
 
-There may be problems related to Makefile. Please refer to [Makefile Problem](https://www.notion.so/Makefile-Problem-b266174a19ec426eba6e8e8b3119c7d0) 
+There may be problems related to Makefile. Please refer to [Makefile Problem](https://github.com/hajin-kim/FPGA_Tutorial_with_HLS/blob/main/Troubleshootings%20f43673650b7c4eb5b83fa2b7a80452e2/Makefile%20Problem%20b266174a19ec426eba6e8e8b3119c7d0.md) 
 
 ### Setting the source file
 
