Update DoGain Vitis 730de75150cc4347a751df26522589f8.md

--- a/Lab06 Working with HLS 9b2ebc09d3614613aae2553700d082ae/DoGain Vitis 730de75150cc4347a751df26522589f8.md
+++ b/Lab06 Working with HLS 9b2ebc09d3614613aae2553700d082ae/DoGain Vitis 730de75150cc4347a751df26522589f8.md
@@ -8,7 +8,7 @@ Make sure that the board is power-on and connected.
 
 ### Troubleshooting: Cypress "driver error" problem (Vitis can't find the port)
 
-[Troubleshooting: Cypress "driver error" problem (Vitis can't find the port)](https://github.com/hajin-kim/FPGA_Tutorial_with_HLS/blob/main/Troubleshootings%20f43673650b7c4eb5b83fa2b7a80452e2/Troubleshooting%20Cypress%20driver%20error%20problem%20(Viti%209c61286cfd0e4f0bbe4892d0abcdbb78.md) 
+[Troubleshooting: Cypress "driver error" problem (Vitis can't find the port)](https://github.com/hajin-kim/FPGA_Tutorial_with_HLS/blob/main/Troubleshootings%20f43673650b7c4eb5b83fa2b7a80452e2/Troubleshooting%20Cypress%20driver%20error%20problem%20\(Viti%209c61286cfd0e4f0bbe4892d0abcdbb78.md) 
 
 ## Creating Vitis application project
 
